# Frontline_Magazine

./: .gitignore  EXCLUSIVE  P.T.R. Palanivel Thiaga Rajan ‘Central banks are acting like politicians’.html  INSTALL.md  PACKAGE_SUMMARY.md  README.md  build-deb.sh  fetch_article.py  fetch_article_pdf.py  fetch_titles_html.py  main.py  pyproject.toml  requirements.txt  requirements.txt,  requirements_full.txt  requirements_minimal.txt  styles.css  test-fix.sh  test-installation.sh
articles/: 2024 A leap year for Indian democracy.html  A tool to track cell-to-cell contact.html  BJP’s strategic relaunch of CAA unveils a relentless pursuit of majoritarian agenda  .html  EXCLUSIVE  P.T.R. Palanivel Thiaga Rajan ‘Central banks are acting like politicians’.html  Former spouses turn foes in a bitter political battle for Bengal’s Bishnupur.html  Frontline_05-04-2024.html  In Britain, the Establishment confronts the Movement.html  India’s oscillating opposition and the dynamic evolution of protest politics.html  Post-violence Haldwani women, minors allege harassment amid police crackdown.html  SBI’s reluctance to reveal electoral bond data raises concerns about its independence and reliability.html  The crisis of the secular opposition.html  Uttar Pradesh Not yet a done deal.html  West Bengal Will CAA tip the scales.html  Will BJP’s dogged efforts to enter Tamil Nadu and Kerala yield any results.html  ‘BJP can teach corruption to the whole world’ Kanimozhi Karunanidhi, MP.html
src/: article_pdf.py  fetch_article_html.py  fetch_article_pdf.py  fetch_titles_html.py  (+1 more)
(+10 files in other folders)
