[tool.poetry]
name = "frontlinemagazine"
version = "1.0.0"
description = "This scripts will scrape text titles of current issue of Frontline magazine and articles. Export them to html and pdf."
authors = ["Meeran E Mandhini"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
